# calendar

./: .gitignore  README.md
.github/: pull_request_template.md
.github/workflows/: lint.yml
backend/: .env.example  README.md  manage.py  pyproject.toml
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/hoagiecalendar/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
backend/hoagiecalendar/api/: event_views.py
backend/hoagiecalendar/models/: __init__.py  category.py  event.py  user.py
frontend/: classes.ts  eslint.config.mjs  next.config.mjs  package.json  postcss.config.mjs  proxy.ts  tailwind.config.ts  tsconfig.json  types.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/components/: Error.tsx  View.tsx
frontend/lib/: auth0.ts  utils.ts
frontend/lib/hoagie-ui/AuthButton/: index.tsx
frontend/lib/hoagie-ui/Footer/: index.tsx
frontend/lib/hoagie-ui/Layout/: index.tsx
frontend/lib/hoagie-ui/Nav/: index.tsx
frontend/lib/hoagie-ui/ProfileCard/: index.tsx
frontend/lib/hoagie-ui/Theme/: Tab.tsx  index.tsx  theme.css  themes.tsx
