# ===============================
# Project Metadata
# ===============================
[project]
name = "hoagie-calendar"
version = "2.0.0"
description = "Dependency manager for the Hoagie Calendar repository."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Hoagie Club", email = "hoagie@princeton.edu" },
]

maintainers = [
    { name = "Hoagie Club", email = "hoagie@princeton.edu" },
]

# Project dependencies
dependencies = [
    "django>=6.0",
]

# ===============================
# Project URLs
# ===============================
[project.urls]
Homepage = "https://calendar.hoagie.io/"
Repository = "https://github.com/hoagieclub/calendar/"