# ===============================
# Project Metadata
# ===============================
[project]
name = "hoagie-calendar"
version = "0.1.0"
description = "HoagieCalendar backend."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Hoagie Club", email = "hoagie@princeton.edu" },
]

maintainers = [
    { name = "Hoagie Club", email = "hoagie@princeton.edu" },
]

# Project dependencies
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.16.1",
    "python-dotenv>=1.2.1",
]

# ===============================
# Project URLs
# ===============================
[project.urls]
Homepage = "https://calendar.hoagie.io/"
Repository = "https://github.com/hoagieclub/calendar/"
